# dictionary-generator

./: .gitignore  CMakeLists.txt  README.md  example.js  test.dict.txt
include/: backends.hh  frontend.hh
include/dictgen/: backends.hh  core.hh  frontend.hh  parser.hh
lib/: frontend.cc  json_backend.cc  tex_parser.cc  typst_backend.cc
src/: dictgen-v8.hh  frontend.cc  gen.cc  json_backend.cc  main.cc  tex_backend.cc  tex_parser.cc  tex_to_html.cc  typst_backend.cc  utils.cc
test/: json_backend.cc  misc.cc  tex_parser.cc  typst_backend.cc
